--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terrier</title>
+    <title>Terrier &mdash; fetch dogs</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,28 +13,63 @@
   </head>
   <body>
     <main class="container mt-5">
-      <h1>Terrier --The Dogs API Project</h1>
+      <h1 class="fs-2 mb-3">Terrier &mdash; The Dogs API Project</h1>
 
-      <div class="form-floating">
+      <!-- Select -->
+      <div class="form-floating mb-3">
         <select
           class="form-select"
-          aria-label="Select Dog bread"
-          id="dogs-bread"
+          aria-label="Select dog breed"
+          id="dogs-breed"
         >
-          <option selected>Open this select menu</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+          <!-- Options go here -->
+          <option value="huskey">Huskey</option>
         </select>
-        <label for="dogs-bread">Select Bread</label>
+        <label for="dogs-breed">Select Breed</label>
       </div>
+
+      <!-- Carousel -->
+      <div
+        id="carouselExampleSlidesOnly"
+        class="carousel slide w-100 mb-3"
+        data-bs-ride="carousel"
+      >
+        <!-- Carousel Container -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="https://placehold.co/400"
+              class="d-block w-100 rounded-3"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://placehold.co/401"
+              class="d-block w-100 rounded-3"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://placehold.co/402"
+              class="d-block w-100 rounded-3"
+              alt="..."
+            />
+          </div>
+        </div>
+      </div>
+
+      <p class="lead">Wait for images to slide</p>
     </main>
 
-
+    <!-- Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
+    <script src="src/main.js"></script>
   </body>
 </html>
