--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/main.scss" />
+
+    <link rel="stylesheet" href="src/style.scss" />
   </head>
   <body>
     <main class="container mt-5">
@@ -24,7 +25,6 @@
           id="dogs-breed"
         >
           <!-- Options go here -->
-          <option value="huskey">Huskey</option>
         </select>
         <label for="dogs-breed">Select Breed</label>
       </div>
@@ -44,20 +44,6 @@
               alt="..."
             />
           </div>
-          <div class="carousel-item">
-            <img
-              src="https://placehold.co/401"
-              class="d-block w-100 rounded-3"
-              alt="..."
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="https://placehold.co/402"
-              class="d-block w-100 rounded-3"
-              alt="..."
-            />
-          </div>
         </div>
       </div>
 
@@ -70,6 +56,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
     <script src="src/main.js"></script>
   </body>
 </html>
