--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="src/style.scss" />
+    <link rel="stylesheet" href="src/main.scss" />
   </head>
   <body>
     <main class="container mt-5">
